lib_LTLIBRARIES = libConstitutiveModel.la

libConstitutiveModel_la_SOURCES =
libConstitutiveModel_la_LIBADD = \
  $(top_builddir)/J2_plasticity/src/libJ2_plasticity.la \
  $(top_builddir)/constitutive_model_handle/src/libconstitutive_model_handle.la \
  $(top_builddir)/crystal_plasticity/src/libcrystal_plasticity.la \
  $(top_builddir)/damage/src/libdamage.la \
  $(top_builddir)/data_structure/src/libdata_structure.la \
  $(top_builddir)/elasticity/src/libelasticity.la \
  $(top_builddir)/material/src/libmaterial.la \
  $(top_builddir)/utils/src/libutils.la \
  $(top_builddir)/poro_viscoplasticity/src/libporo_viscoplasticity.la
