noinst_LTLIBRARIES = libJ2_plasticity.la


libJ2_plasticity_la_SOURCES  = J2_plasticity.cc
libJ2_plasticity_la_CPPFLAGS = -I$(top_srcdir)/local_include \
                               -I$(top_srcdir)/utils/include \
                               -I$(top_srcdir)/constitutive_model_handle/include \
                               -I$(top_srcdir)/elasticity/include \
                               -I$(top_srcdir)/material/include \
                               -I$(srcdir)/../include
