noinst_LTLIBRARIES = libconstitutive_model_handle.la

libconstitutive_model_handle_la_SOURCES  = constitutive_model_handle.cc GcmSolverInfo.cc
libconstitutive_model_handle_la_CPPFLAGS = -I$(top_srcdir)/local_include \
                                           -I$(top_srcdir)/material/include \
                                           -I$(top_srcdir)/elasticity/include \
                                           -I$(srcdir)/../include
