noinst_LTLIBRARIES = libdamage.la

libdamage_la_SOURCES = continuum_damage_model.cc
libdamage_la_CPPFLAGS = -I$(top_srcdir)/local_include \
                        -I$(top_srcdir)/elasticity/include \
                        -I$(top_srcdir)/constitutive_model_handle/include \
                        -I$(top_srcdir)/material/include \
                        -I$(top_srcdir)/utils/include \
                        -I$(srcdir)/../include
