noinst_LTLIBRARIES = libelasticity.la

libelasticity_la_SOURCES = hyperelasticity.cc strain_energy_density_function.cc
libelasticity_la_CPPFLAGS = -I$(top_srcdir)/local_include \
                            -I$(top_srcdir)/material/include \
                            -I$(top_srcdir)/utils/include \
                            -I$(srcdir)/../include
