noinst_LTLIBRARIES = libporo_viscoplasticity.la

libporo_viscoplasticity_la_SOURCES = FeFpModels.cc  \
                                     FiniteStrainModels.cc  \
                                     KMS-IJSS2017.cc \
                                     MechanicalModels.cc  \
                                     TimeIntegration_Manager.cc

libporo_viscoplasticity_la_CPPFLAGS = -I$(top_srcdir)/material/include \
                                      -I$(srcdir)/../include

