noinst_LTLIBRARIES = libporo_viscoplasticity.la

libporo_viscoplasticity_la_SOURCES = poro_visco_plasticity.cc

libporo_viscoplasticity_la_CPPFLAGS = -I$(top_srcdir)/material/include \
                                      -I$(top_srcdir)/local_include \
                                      -I$(top_srcdir)/utils/include \
                                      -I$(top_srcdir)/constitutive_model_handle/include \
                                      -I$(srcdir)/../include

