bin_PROGRAMS = test_data_structure

test_data_structure_SOURCES = data_structure_test.cc
test_data_structure_LDADD = $(top_builddir)/lib/libConstitutiveModel.la
test_data_structure_CPPFLAGS = \
  -I$(top_builddir)/include \
  -I$(top_srcdir)/local_include \
  -I$(top_srcdir)/data_structure/include \
  -I$(top_srcdir)/utils/include 
